Stópka_KacperBurakowski.html

--- a/Stópka_KacperBurakowski.html
+++ b/Stópka_KacperBurakowski.html
@@ -1,23 +1,12 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wyświetlanie Danych Ucznia</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
 
-        h2 {
-            color: #4CAF50;
-        }
-    </style>
 </head>
 <body>
-
-    <h2>Kacper Burakowski 2G gr1/2</h2>
+<!-- www.DarmowyLicznik.pl -->
+<div class="image-rotator"><div class="rotator-slide" id="rotator-slide-1"><a href="https://www.darmowylicznik.pl/" title="Przejdź na stronę licznika" target="_blank"><img src="https://www.darmowylicznik.pl/licznik.php?id=147024" alt="Darmowy licznik odwiedzin" style="border:0px;" /></a></div></div>
+<!-- END www.DarmowyLicznik.pl -->
 
 </body>
 </html>
